1.1.4:
	- Fix escaping URLs in crossref plugin (Bug 246421)
	- Fix exceptions with exotic characters on latin1 systems
	- Fix out of date tag action strings (Bug 247557)
	- Fix crashing on opening docs with keybaord (Bug 235270)

1.1.3:
	- Annotation support (Charlotte Curtis)
	- Support import of UTF8 bibtex (Bug 223763, Sergey B Kirpichev's patch)
	- Fix detection of crossref query failure
	- Fix crash in crossref parsing (Bug 222340)
	- Fix crash in bibtex import (Bug 217866)
	- Fix failing to set fields in list view (Bug 208184)

1.1.2:
	- Remove tooltips on old GTK versions
	- Report errors when a plugin cannot be enabled
	- Updated translations
	- Shortcut buttons on document icons
	- Fix using old tooltip code even with recent GTK
	- UI for attaching tags during adding files
	- Pubmed: fill out DOI field, use full first names (Aurélien Naldi)
	- Search searches all fields (Bug 198671)
	- Revised tagging UI
	- Expand plugin API
	- Unbreak sorting in list view (Bug 202188)
1.1.1:
	- Updated Russian translation (Sergey Kirpichev)
	- Updated simplified Chinese translation (Zhi-Wei Huang)
	- Updated Danish translation (Andreas Dalsgaard)
	- Fix parsing data-less elements in pubmed plugin (Bug 196174)
	- Fix paste in document properties (Bug 195819)
	- Fix add doc with ID dialog
	- Make "All" and "Untagged" immutable, add separator (Bug 192680, Jochen Martin Eppler)
	- Check for zero-sized thumbnails (Bug 192279)
	- Add parse_bibtex to PythonDocument
	- Fix compilation with gcc 4.3 (Deji Akingunola)

1.1.0:
	- Update to bibutils 3.39
	- Detailed report in add documents dialog
	- Thumbnails generated asynchronously for more responsive loading
	- Support document action plugins (AN + JCS)
	- Lyx citation plugin (Aurélien Naldi)
	- Added documents are scrolled to
	- DocumentProperties shows correct fields depending on document type
	- Add google scholar web link
	- Add PubMed web link
	- Allow specific selection of different web links